crates/iroha_trigger_derive/tests/ui/fail/main_with_attr.rs
//! Fails when trigger `#[main]` receives arguments.
use iroha_trigger::prelude::*;
use iroha_trigger_derive::main;

#[main(trace)]
fn main(host: Iroha, context: Context) {
    let _ = (host, context);
}
